Fix images and iframes overflowing in custom pages and product description

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -102,6 +102,10 @@
     line-height: 1.6em
     margin-top: 40px
     
+    img, iframe
+      display: block
+      max-width: 100%
+    
     ol, ul
       margin: 1em 0
       
